--- a/test.html
+++ b/test.html
@@ -1,8 +1,30 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<script
-			type="application/javascript"
-			src="./rder.deploy.js">
-		</script>
+		<title>rder unit test</title>
+
+		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+
+		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
+
+		<script type="application/javascript" src="./rder.deploy.js"></script>
 	</head>
+
+	<body>
+		<div id="qunit"></div>
+
+		<div id="qunit-fixture"></div>
+
+		<script type="application/javascript">
+			QUnit.test( "rder unit test", function( assert ) {
+
+				assert.deepEqual( rder( [ Array, RegExp, Object ], "name" ),
+					{ "Array": 0, "RegExp": 1, "Object": 2 }, "should be deeply equal" );
+
+				assert.deepEqual( rder( [ 1, 2, 3 ], "name" ),
+					{ "1": 0, "2": 1, "3": 2 }, "should be deeply equal" );
+					
+			} );
+		</script>
+	</body>
 </html>
