--- a/test.html
+++ b/test.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>rder unit test</title>
 
-		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Rder QUnit Example</title>
+	<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+	<script src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
+	<script type="application/javascript" src="./rder.deploy.js"></script>
+</head>
 
-		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
+<body>
+	<div id="qunit"></div>
+	<div id="qunit-fixture"></div>
+	<script>
+		QUnit.test("ok test", function (assert) {
 
-		<script type="application/javascript" src="./rder.deploy.js"></script>
-	</head>
+			assert.deepEqual( rder( [ 1, 2, 3 ], "name" ),
+				{ "1": 0, "2": 1, "3": 2 }, "should be deeply equal" );
 
-	<body>
-		<div id="qunit"></div>
+		});
+	</script>
+</body>
 
-		<div id="qunit-fixture"></div>
-
-		<script type="application/javascript">
-			QUnit.test( "rder unit test", function( assert ) {
-
-				assert.deepEqual( rder( [ 1, 2, 3 ], "name" ),
-					{ "1": 0, "2": 1, "3": 2 }, "should be deeply equal" );
-
-			} );
-		</script>
-	</body>
 </html>
