--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
 			QUnit.test( "rder unit test", function( assert ) {
 
 				assert.deepEqual( rder( [ 1, 2, 3 ], "name" ),
-					{ "1": 0, "2": 1, "3": 2 }, "should be deeply equal" );
+					{ "1": 0, "2": 1, "3": 2 }, "should be equal to { '1': 0, '2': 1, '3': 2 }" );
 
 			} );
 		</script>
